fix compose, add getting file by id, add desc sort for files
