# docs/swagger.json
@@ -17,6 +17,51 @@
     "host": "localhost:4000",
     "basePath": "/",
     "paths": {
+        "/api/v1/analyse/edf": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get file by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "analyse"
+                ],
+                "summary": "Get file by ID",
+                "parameters": [
+                    {
+                        "description": "file info",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.GetFileByIDRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.FileInfo"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/analyse/list_edf": {
             "put": {
                 "security": [
@@ -731,6 +776,14 @@
                 },
                 "search": {
                     "type": "string"
+                }
+            }
+        },
+        "model.GetFileByIDRequest": {
+            "type": "object",
+            "properties": {
+                "file_id": {
+                    "type": "integer"
                 }
             }
         },
